Ensure visibility works with trickle

--- a/less/assessmentResultsTotal.less
+++ b/less/assessmentResultsTotal.less
@@ -4,3 +4,7 @@
 	background-position: 0% 0%;
 	background-repeat: repeat;
 }
+
+.assessmentResultsTotal-component.visibility-hidden {
+	display:none;
+}
